fixes #datepicker z-index/ buttons in history, handle dates/times in history, roles status in upper bar

--- a/app/styles/css/new.css
+++ b/app/styles/css/new.css
@@ -45,11 +45,16 @@
 
 .label.label-custom {
     margin-right: 10px;
-    padding: .3em .4em .3em .6em;
+    padding: .2em .4em .3em .6em;
 }
 
 .table-scroll {
     display: block;
     max-width: 100%;
     overflow: auto
+}
+
+div[uib-datepicker-popup-wrap] {
+    z-index: 10000;
+    position: relative;
 }
